# chitram

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_ANALYSIS.md  GITHUB_SECRETS_CHECKLIST.md  README.md  TODO.md  docker-compose.prod.yml  requirements-phase2.md  requirements-phase3.md  requirements.md
.claude/agents/: debugging.md
.claude/commands/: ship.md  validate-deploy.md
.claude/rules/: commit-checklist.md  python.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/ISSUE_TEMPLATE/: phase-implementation.md
.github/workflows/: cd.yml  ci.yml  post-deployment-tests.yml  ui-tests.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f6a8fb30700_add_users_table_and_image_ownership.py  42cb2a9fa7a2_add_thumbnail_key_column.py  a11aa549249d_add_width_and_height_columns.py  c3e5f8a92b1d_add_supabase_id_to_users.py  d2dc1766a59c_initial_schema_with_7_columns.py  okr4l08scgm2_add_tags_image_tags_and_tag_feedback.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  dependencies.py  health.py  images.py  tags.py  web.py
backend/app/models/: __init__.py  image.py  tag.py  user.py
backend/app/schemas/: __init__.py  auth.py  error.py  image.py  tag.py
backend/app/services/: __init__.py  auth_service.py  cache_service.py  concurrency.py  image_service.py  rate_limiter.py  storage_service.py  tag_service.py  thumbnail_service.py
backend/app/services/ai/: __init__.py  base.py  mock.py  openai_vision.py
backend/app/services/auth/: __init__.py  base.py  factory.py  local.py  supabase.py
backend/app/static/: .gitkeep
backend/app/templates/: 404.html  auth_callback.html  base.html  home.html  image.html  login.html  my_images.html  register.html  upload.html
backend/app/templates/partials/: gallery_item.html  gallery_items.html  nav.html
backend/app/utils/: validation.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_images.py  test_images_auth.py  test_tags.py  test_thumbnails.py
backend/tests/integration/: test_ai_vision.py  test_minio_integration.py  test_rate_limiter_integration.py  test_redis_integration.py  test_web_routes.py
backend/tests/unit/: test_ai_providers.py  test_auth_providers.py  test_auth_service.py  test_cache_service.py  test_concurrency.py  test_image_service_cache.py  test_minio_storage.py  test_performance_fixes.py  test_rate_limiter.py  test_tag_models.py  test_tag_service.py  test_template_urls.py  test_thumbnail_service.py  test_web_auth.py
blogs/: ARCHITECTURE_DIAGRAMS.md  BLOG_PLATFORM_RECOMMENDATIONS.md  BLOG_POST_OUTLINE.md  BLOG_PUBLISHING_CHECKLIST.md  README.md
browser-tests/: .gitignore  ARCHITECTURE_DECISION.md  CICD_SETUP_COMPLETE.md  CI_CD_INTEGRATION.md  CLEANUP_CHECKLIST.md  FAQ.md  GITHUB_ACTIONS_QUICK_START.md  INSTALLATION.md  README.md  SESSION_NOTES.md  TESTING_LAYERS.md  VERIFY.md  package.json  setup.sh
browser-tests/.github/: CODEOWNERS
browser-tests/examples/: auth-flow-test.ts  comprehensive-test.ts  screenshot-all.ts  smoke-test.ts
browser-tests/tools/: gallery-test.ts
browser-tests/workflows/: auth-flow.md  gallery-flow.md
deploy/: .env.production.example  Caddyfile  README.md  docker-compose.local.yml  docker-compose.yml  validate-local.sh
docs/: CODESPACES_RUNBOOK.md  PHASE1_TESTING.md  PHASE2_RETRO.md  PHASE3_UI_RUNBOOK.md  README.md  changelog.md  code-review-checklist.md  database-error-handling-implementation.md  development-workflow.md  phase1-lean-removals-summary.md
docs/adr/: 0000-template.md  0001-use-fastapi-framework.md  0002-postgresql-for-metadata.md  0003-anonymous-access-phase1.md  0004-skip-delete-token-phase1.md  0005-structured-error-format.md  0006-no-kubernetes-for-mvp.md  0007-use-github-codespaces.md  0008-phase1-lean-defer-complexity.md  0009-redis-caching-for-metadata.md  0010-concurrency-control-for-uploads.md  0011-user-authentication-jwt.md  0012-background-jobs-celery.md  0013-web-ui-htmx.md  0014-test-dependency-container.md  0015-ui-design-system.md
docs/architecture/: BUILDING_BLOCKS.md  phase-1-foundation.md  phase-2-performance.md  phase-3-scaling.md  phase-4-observability.md  phase3-web-architecture.md  ui-design-doc.md
docs/archive/: README.md  code-review-phase1-lean.md  development-workflow.md  image-hosting-mvp-distributed-systems-FULL.md  phase-execution-plan.md
docs/concepts/: bun-and-playwright.md
docs/deployment/: DEPLOYMENT_RETRO.md  DEPLOYMENT_STRATEGY.md  DISASTER_RECOVERY.md  DROPLET_SETUP.md  GITHUB_SECRETS_SETUP.md  POST_DEPLOY_CHECKLIST.md  SECRETS.md  SUPABASE_SETUP.md
docs/design/: DESIGN-pluggable-auth-system.md
docs/future/: PRD-pluggable-auth-system.md
docs/implementation/: ai-auto-tagging-plan.md  devops-architecture-ai-tagging.md  github-issues-template.md  phase1-database-schema-summary.md  phase2-tag-service-summary.md  phase3-api-endpoints-summary.md  phase4-web-ui-summary.md  phase5-ai-vision-provider-plan.md  (+2 more)
scripts/: backup.sh  cleanup-test-data.sh  restore.sh  run-tests.sh  smoke-test.sh  validate-env.sh
(+14 files in other folders)
